--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <h6>Javascript</h6>
 				 <p>界面优雅的音乐播放器，依赖百度FM，支持歌曲切换/暂停/播放、循环/随机播放、音量调节、歌词显示等，主要运用JS、AJAX等</p>
 				 <div class="col-md-12 cmpny1">
-				 	<a href="music-player/index.html" target="blank"><img src="images/h1.png" width="60%"></a>
+				 	<a href="http://annytime.coding.me/music-player/" target="blank"><img src="images/h1.png" width="60%"></a>
 				 </div>
 			 </div><div class="clearfix"></div>
 			 <div class="education_details">
