--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p>求职意向：Web前端/网页设计</p>
 					<p>教育经历：常熟理工学院</p>
 					<p>学历专业：本科/数字媒体技术</p>
-					<p>家庭住址：河南漯河</p>
+					<p>j居住地址：苏州市胜浦镇</p>
 					<p>联系电话：18852956139</p>
 				 </div>
 				<p style="margin-top:20px;">我是一个积极向上，勤奋好学的人，有团队合作精神，有优秀的沟通能力和良好的敬业精神。具有良好的代码风格，良好的沟通和协调能力，思维活跃，逻辑清晰，较强的团队意识和执行力。</p>
@@ -63,9 +63,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="skill_info">
 			 	<p>熟悉HTML5、CSS3、页面架构和布局，可准确还原设计</p>
 				<p>熟悉AJAX、JavaScript、jQuery等前端技术，掌握面向对象编程思想 </p>  
-				<p>了解Bootstrap、less、Vue等前端框架工具</p>
+				<p>了解Bootstrap、less等前端框架工具</p>
+				<p>掌握php，Mysql等开发技术<、p>
 				<p>熟练掌握PhotoShop、flash等工具的使用</p>
-				<p>熟练使用Coreldraw、Illustrator等工具</p>
 				<p>熟练使用office相关办公软件</p>
 			 </div>
 			 <div class="clearfix"></div>
@@ -76,7 +76,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="education_details">
 				 <h4>H5网页音乐播放器</h4>
 				 <h6>Javascript</h6>
-				 <p>界面优雅的音乐播放器，依赖百度FM，支持歌曲切换/暂停/播放、循环/随机播放、音量调节、歌词显示等，主要运用JS、AJAX等</p>
+				 <p>界面优雅的音乐播放器，支持歌曲切换/暂停/播放、循环/随机播放、音量调节、歌词显示等，主要运用JS、AJAX等</p>
 				 <div class="col-md-12 cmpny1">
 				 	<a href="http://annytime.coding.me/music-player/" target="blank"><img src="images/h1.png" width="60%"></a>
 				 </div>
@@ -92,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <div class="education_details">
 				 <h4>抓怪兽小游戏</h4>
 				 <h6>HTML5、Javascript</h6>
-				 <p>一款原生JS写的抓怪兽小游戏；支持计分模式和数据存储；通过方向键控制英雄的移动</p>
+				 <p>基于原生JS游戏引擎的抓怪兽小游戏；支持计分模式和数据存储；通过方向键控制英雄的移动</p>
 				 <div class="col-md-12 cmpny1">
 				 	<a href="https://annytime.github.io/game01/" target="blank"><img src="images/h7.png" width="60%"></a>
 				 </div>
@@ -105,7 +105,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 	<img src="images/h3.png" width="60%"><br><br>
 				 	<p>耳机UI图标设计</p>
 				 	<img src="images/h4.png" width="60%"><br><br>
-				 	<p>“一沙一世界”图像设计</p>
+				 	<p>“一沙一世界”平面设计</p>
 				 	<img src="images/h5.png" width="60%"><br>
 				 </div>
 			 </div><div class="clearfix"></div>
