--- a/index.html
+++ b/index.html
@@ -49,23 +49,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <h3 class="clr1">个人信息 Personal information</h3>
 			 <div class="company_details">
 			     <div class="intro" style="border-bottom:3px dashed #999">
-					<p>求职意向：Web前端 / 网页设计</p>
-					<p>教育经历：常熟理工学院</p>
+					<p>求职意向：平面设计</p>
+					<p>毕业院校：常熟理工学院</p>
 					<p>学历专业：本科 / 数字媒体技术</p>
-					<p>居住地址：苏州市胜浦镇</p>
+					<p>居住地址：河南省漯河市</p>
 					<p>联系电话：18852956139</p>
 				 </div>
-				<p style="margin-top:20px;">我是一个积极向上，勤奋好学的人，有团队合作精神，有优秀的沟通能力和良好的敬业精神。具有良好的代码风格，良好的沟通和协调能力，思维活跃，逻辑清晰，较强的团队意识和执行力。</p>
+				<p style="margin-top:20px;">我是一个积极向上，勤奋好学的人，有团队合作精神，有优秀的沟通能力和良好的敬业精神。具有良好的沟通和协调能力，思维活跃，逻辑清晰，较强的团队意识和执行力。</p>
 			 </div>
 		 </div>
 		 <div class="skills">
 			 <h3 class="clr2">能力技能 Professional skills</h3>
 			 <div class="skill_info">
-			 	<p>熟悉HTML5、CSS3、页面架构和布局，可准确还原设计</p>
-				<p>熟悉AJAX、JavaScript、jQuery等前端技术，掌握面向对象编程思想 </p>  
-				<p>了解Bootstrap、less等前端框架工具</p>
-				<p>掌握php，Mysql等开发技术</p>
-				<p>熟练掌握PhotoShop、flash等工具的使用</p>
+			 	<p>熟练掌握PhotoShop、CoerlDraw、Pr等工具的使用</p>
+				<p>熟悉HTML5、CSS3、页面架构和布局，可准确还原设计</p> 
 				<p>熟练使用office相关办公软件</p>
 			 </div>
 			 <div class="clearfix"></div>
