--- a/index.html
+++ b/index.html
@@ -79,14 +79,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 </div>
 			 </div><div class="clearfix"></div>
 			 <div class="education_details">
-				 <h4>商城首页</h4>
-				 <h6>HTML5+CSS3+JS</h6>
-				 <p>商城首页，主要运用 HTML, CSS, jquery, JS</p>
-				 <div class="col-md-12 cmpny1">
-				 	<a href="https://annytime.github.io/web/" target="blank"><img src="images/h2.png" width="60%"></a>
-				 </div>
-			 </div><div class="clearfix"></div>
-			 <div class="education_details">
 				 <h4>抓怪兽小游戏</h4>
 				 <h6>HTML5、Javascript</h6>
 				 <p>基于原生JS游戏引擎的抓怪兽小游戏；支持计分模式和数据存储；通过方向键控制英雄的移动</p>
@@ -103,7 +95,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 	<p>耳机UI图标设计</p>
 				 	<img src="images/h4.png" width="60%"><br><br>
 				 	<p>“一沙一世界”平面设计</p>
-				 	<img src="images/h5.png" width="60%"><br>
+				 	<img src="images/h5.png" width="60%"><br><br>
+					<p>居室平面布置图设计</p>
+				 	<img src="images/h6.jpg" width="60%"><br>
 				 </div>
 			 </div><div class="clearfix"></div>
 		 </div>
