--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="col-md-12 cmpny1">
 				    <p>紫色系简洁UI设计</p>
 				 	<img src="images/h3.png" width="60%"><br><br>
-				 	<p>耳机UI图标设计</p>
-				 	<img src="images/h4.png" width="60%"><br><br>
+				 	<p>汽车虚拟展示系统界面设计</p>
+				 	<img src="images/h8.jpg" width="60%"><br><br>
 				 	<p>“一沙一世界”平面设计</p>
 				 	<img src="images/h5.png" width="60%"><br><br>
 					<p>居室平面布置图设计</p>
