--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<p>汽车虚拟展示系统界面设计</p>
 				 	<img src="images/h8.jpg" width="60%"><br><br>
 					<p>居室平面布置图设计</p>
-				 	<img src="images/h6.jpg" width="60%"><br>
+				 	<img src="images/h6.jpg" width="60%"><br><br>
+					 <p>细节图</p>
 					 <img src="images/h9.jpg" width="60%"><br>
 				 </div>
 			 </div><div class="clearfix"></div>
