--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 <h3 class="clr2">能力技能 Professional skills</h3>
 			 <div class="skill_info">
 			 	<p>熟练掌握PhotoShop、CoerlDraw、Pr等工具的使用</p>
+				<p>熟练掌握Illustrator、AE等工具的使用</p>
 				<p>熟悉HTML5、CSS3、页面架构和布局，可准确还原设计</p> 
 				<p>熟练使用office相关办公软件</p>
 			 </div>
@@ -87,15 +88,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 </div>
 			 </div><div class="clearfix"></div>
 			 <div class="education_details">
-				 <h4>UI设计</h4>
+				 <h4>平面设计</h4>
 				 <h6>Potoshop</h6>
 				 <div class="col-md-12 cmpny1">
 				    <p>紫色系简洁UI设计</p>
 				 	<img src="images/h3.png" width="60%"><br><br>
 				 	<p>“一沙一世界”平面设计</p>
 				 	<img src="images/h5.png" width="60%"><br><br>
-					<p>汽车虚拟展示系统界面设计</p>
-				 	<img src="images/h8.jpg" width="60%"><br><br>
+					<p>双重曝光人像设计</p>
+				 	<img src="images/h10.jpg" width="60%"><br><br>
 					<p>居室平面布置图设计</p>
 				 	<img src="images/h6.jpg" width="60%"><br><br>
 					 <p>细节图</p>
