--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			 </div><div class="clearfix"></div>
 			 <div class="education_details">
 				 <h4>平面设计</h4>
-				 <h6>Potoshop</h6>
+				 <h6>Potoshop、CDR、AI</h6>
 				 <div class="col-md-12 cmpny1">
 				    <p>紫色系简洁UI设计</p>
 				 	<img src="images/h3.png" width="60%"><br><br>
 				 	<p>“一沙一世界”平面设计</p>
 				 	<img src="images/h5.png" width="60%"><br><br>
 					<p>双重曝光人像设计</p>
-				 	<img src="images/h10.jpg" width="60%"><br><br>
+				 	<img src="images/h10.jpg" height="70%"><br><br>
 					<p>居室平面布置图设计</p>
 				 	<img src="images/h6.jpg" width="60%"><br><br>
 					 <p>细节图</p>
